Added github URL to style.css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name:   SassChild.
- Theme URI:    {insert GitHub url}
+ Theme URI:    https://github.com/JoshuaMapley/SassChild
  Description:  Spice up your web development with some handy Sass & Babel compiling.
  Author:       Joshua Mapley
  Author URI:   http://joshuamapley.com
